Added some proper errors reponses to OpenAPI definitions, implemented ListSnapshots in OpenAPI
